when downloading a region, consider tile availability for each layer separately instead of judging from the first

Besides being more precise, it also avoids a crash by not trying to guess the source directory from the first tile layer.

BUG: 302842