src/lib/MergedLayerDecorator.cpp
@@ -171,7 +171,9 @@ void MergedLayerDecorator::downloadStackedTile( const TileId &id, const QVector<
 {
     foreach ( const GeoSceneTexture *textureLayer, textureLayers ) {
         const TileId tileId( textureLayer->sourceDir(), id.zoomLevel(), id.x(), id.y() );
-        d->m_tileLoader->downloadTile( tileId );
+        if ( d->m_tileLoader->tileStatus( tileId ) != TileLoader::Available ) {
+            d->m_tileLoader->downloadTile( tileId );
+        }
     }
 }
 
